# hw-tools

./: .gitignore  Dockerfile  README.md  action_port.py  app.py  db.py  docker-compose.yaml  handlers.py  pyproject.toml
configs/: config.py  devices.json
devices/ports/: barrier_port.py
devices/virtual/: test_scales.py
src/api/: app.py  db.py
src/devices/: __init__.py  action_port.py  config.json  config.py
src/devices/modules/: __init__.py  barrier.py  vt009.py
src/devices/ports/: barrier_port.py  scales_port.py
src/devices/virtual/: test_barrier.py  virtual_barrier.py  virtual_scales.py
src/tests/: conftest.py
src/tests/test_api/: test_devices.py
src/tests/test_devices/ports/: scales_port.py
src/tests/test_devices/virtual/: virtual_scales.py
